[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/login/login_spear.png" type="Texture" id=1]
[ext_resource path="res://Games/StoneAge/assets/new_map_bg_blur.jpg" type="Texture" id=2]
[ext_resource path="res://assets/login/login_rocks.png" type="Texture" id=3]
[ext_resource path="res://assets/login/login ui.png" type="Texture" id=4]
[ext_resource path="res://assets/login/login_wood.png" type="Texture" id=5]
[ext_resource path="res://Scenes/LoginNew.gd" type="Script" id=6]
[ext_resource path="res://assets/font/Combe-ZVzRJ.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/font/Dradab-nR4BJ.otf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/login/login_edit1.png" type="Texture" id=9]
[ext_resource path="res://assets/login/login_edit2.png" type="Texture" id=10]
[ext_resource path="res://assets/login/hand.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "wood"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("wood:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.3, 14.5, 19.8 ),
"transitions": PoolRealArray( 1, 1.7411, 2, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -3.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_top = 7
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/font/bBagian.ttf"

[sub_resource type="DynamicFont" id=10]
size = 18
extra_spacing_top = -6
extra_spacing_bottom = -6
font_data = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -6
extra_spacing_bottom = -6
font_data = SubResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 27
extra_spacing_top = -6
extra_spacing_bottom = -6
font_data = ExtResource( 7 )

[node name="LoginNew" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.568627, 0.568627, 0.568627, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="wood" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 151.0
margin_top = -183.0
margin_right = 225.0
margin_bottom = 29.0
rect_rotation = 3.8352
rect_pivot_offset = Vector2( 40, 20 )
texture = ExtResource( 5 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -339.0
margin_right = 361.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -404.0
margin_top = -173.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/wood = SubResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.733333 )
margin_left = 312.0
margin_top = 87.0
margin_right = 484.0
margin_bottom = 146.0
custom_colors/font_color = Color( 0.466667, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Log In"
align = 1
valign = 1

[node name="Input_name" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -253.0
margin_right = -303.0
margin_bottom = -207.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="LineEdit" type="LineEdit" parent="Input_name"]
margin_left = 31.0
margin_top = -1.0
margin_right = 182.0
margin_bottom = 44.0
focus_mode = 1
custom_colors/font_color = Color( 0.203922, 0.203922, 0.203922, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
placeholder_text = "NAMEUSER"

[node name="Input_pass" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -490.0
margin_top = -205.0
margin_right = -316.0
margin_bottom = -156.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="LineEdit" type="LineEdit" parent="Input_pass"]
margin_left = 21.0
margin_top = -1.0
margin_right = 174.0
margin_bottom = 44.0
focus_mode = 1
custom_colors/font_color = Color( 0.203922, 0.203922, 0.203922, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
secret = true
secret_character = "x"
placeholder_text = "PASSWORD"

[node name="btn_remember" type="Button" parent="."]
margin_left = 319.0
margin_top = 249.0
margin_right = 482.0
margin_bottom = 270.0
flat = true
expand_icon = true
__meta__ = {
"_edit_group_": true
}

[node name="lb_exit" type="Label" parent="btn_remember"]
modulate = Color( 1, 1, 1, 0.882353 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.109804, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 10 )
text = "[  ] RECORDAR CLAVE"
valign = 1

[node name="lb_X" type="Label" parent="btn_remember"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -20.5
margin_right = 30.0
margin_bottom = 20.5
custom_colors/font_color = Color( 0.137255, 0.105882, 0.105882, 1 )
custom_fonts/font = SubResource( 11 )
text = "x"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.698039 )
margin_left = 342.0
margin_top = 262.0
margin_right = 439.0
margin_bottom = 356.0
focus_mode = 0
icon = ExtResource( 11 )
flat = true
expand_icon = true

[node name="lb_enter" type="Label" parent="Button"]
margin_left = -37.0
margin_top = 27.0
margin_right = 135.0
margin_bottom = 86.0
rect_rotation = -6.1742
custom_colors/font_color = Color( 0.152941, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 5 )
text = "ENTRAR"
align = 1
valign = 1

[node name="btn_account" type="Button" parent="."]
margin_left = 603.0
margin_top = 267.0
margin_right = 696.0
margin_bottom = 366.0
focus_mode = 0
flat = true
expand_icon = true

[node name="lb_account" type="Label" parent="btn_account"]
modulate = Color( 1, 1, 1, 0.733333 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = 59.0
margin_right = -17.0
margin_bottom = 59.0
rect_rotation = -56.5091
custom_colors/font_color = Color( 0.109804, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 6 )
text = "Nueva
Cuenta"
align = 1
valign = 1

[node name="btn_exit" type="Button" parent="."]
margin_left = 103.0
margin_top = 276.0
margin_right = 193.0
margin_bottom = 338.0
focus_mode = 0
flat = true
expand_icon = true

[node name="lb_exit" type="Label" parent="btn_exit"]
modulate = Color( 1, 1, 1, 0.733333 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = -14.0
margin_right = 32.5
margin_bottom = 80.0
rect_rotation = -31.5252
custom_colors/font_color = Color( 0.109804, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 6 )
text = "SALIR"
align = 1
valign = 1
